samples/_failures_safe/1761424212_684f1d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_892ba2aa.c: In function ‘main’:
./samples/SAFE/__tmp_892ba2aa.c:153:5: error: expected expression at end of input
  153 |     double cpu_time = ((double)(end_time -
      |     ^~~~~~
./samples/SAFE/__tmp_892ba2aa.c:153:5: error: expected declaration or statement at end of input
